--- a/practice/src/app/landing-page/landing-page.component.html
+++ b/practice/src/app/landing-page/landing-page.component.html
@@ -1,1 +1,14 @@
-<p>landing-page works!</p>
+<body class="buddy">
+<form method="post" action >
+  <p>Username:</p>
+  <input id="1" type="text" placeholder="Username">
+  <p>Password:</p>
+  <input  id="2" type="password" placeholder="Password">
+</form>
+
+  <button onClick="Afis()" class="buddy1">
+    Login
+  </button>
+  <p id="Here"></p>
+
+</body>
